--- a/app/src/main/res/layout/fragment_behaviour.xml
+++ b/app/src/main/res/layout/fragment_behaviour.xml
@@ -32,84 +32,84 @@
         android:layout_width="fill_parent"
         android:layout_height="30dp"/>
 
-    <Button
-        android:id="@+id/up_button"
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"/>
+
+    <TextView
+        android:id="@+id/ssid_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:ems="10"
         android:textStyle="bold"
-        android:text="@string/up_button"
-        android:textColor="@android:color/white"
-        android:background="@drawable/apptheme_btn_default_holo_dark"/>
+        android:textAlignment="center"
+        android:hint="@string/ssid"
+        android:textIsSelectable="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_blue_dark"/>
+
+    <EditText
+        android:id="@+id/ssid"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:hint="@string/ssid"
+        android:background="@drawable/apptheme_edit_text_holo_dark"
+        android:textAlignment="center"
+        android:ems="10">
+
+        <requestFocus/>
+
+    </EditText>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="30dp"/>
+
+    <TextView
+        android:id="@+id/password_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:hint="@string/password"
+        android:textIsSelectable="true"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/holo_blue_dark"/>
+
+    <EditText
+        android:id="@+id/password"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:inputType="textPassword"
+        android:hint="@string/password"
+        android:background="@drawable/apptheme_edit_text_holo_dark"
+        android:textAlignment="center"
+        android:ems="10">
+
+    </EditText>
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="30dp"/>
 
     <Button
-        android:id="@+id/down_button"
+        android:id="@+id/submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:ems="10"
         android:textStyle="bold"
-        android:text="@string/down_button"
+        android:text="@string/submit_behaviour"
         android:textColor="@android:color/white"
         android:background="@drawable/apptheme_btn_default_holo_dark"/>
 
     <View
         android:layout_width="fill_parent"
         android:layout_height="30dp"/>
-
-    <TextView
-        android:id="@+id/ip_address_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:hint="@string/option1"
-        android:textIsSelectable="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/holo_blue_dark"/>
-
-    <TextView
-        android:id="@+id/ip_address_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textIsSelectable="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/holo_blue_dark"/>
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="30dp"/>
-
-    <TextView
-        android:id="@+id/port_number_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:hint="@string/option2"
-        android:textIsSelectable="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/holo_blue_dark"/>
-
-    <TextView
-        android:id="@+id/port_number_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textIsSelectable="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/holo_blue_dark"/>
 
 </LinearLayout>
